# stm32f4_player

./: CMakeLists.txt  README.md
src/ap/: ap.cpp
src/ap/image/: img_logo2.c
src/bsp/: bsp.h  stm32f4xx_it.c
src/common/: def.h
src/common/hw/include/: button.h  cli.h
src/common/hw/include/lcd/: st7567.h
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: button.c  cli.c  dxl.c  gpio.c  i2s.c  lcd.c  sd.c  spi.c  uart.c
src/hw/driver/dxl/: dxl_uart.c
src/hw/driver/lcd/: st7567.c
tools/: arm-none-eabi-gcc.cmake
